assets/css/main.css
html,
body {
	width: 100%;
	height: 100%;
}

body {
	font-size: 20px;
	background: #f6f6f6;
	color: #23495d;
	opacity:0;
	transition: opacity 2s;
	-webkit-transition: opacity 2s; /* Safari */
}

h1
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Open Sans','Varela Round',Arial,sans-serif;
			color: #5B5B5B;
}
h1 {
	font-size: 15px;
}

h2 {
	font-size: 50px;
}``

.about-me {
	margin-top: 20px;
	margin-bottom: 20px;
}

/*Navigation Bar*/
.grow:hover
{
  -webkit-transform: scale(1.28);
  -ms-transform: scale(1.28);
  transform: scale(1.28);
}

.navbar-default {
    border-color: rgba(34,34,34,.05);
    font-family: 'Open Sans','Varela Round',Arial,sans-serif;
    background-color: white;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.navbar-fixed-top.scrolled {
  background-color: white !important;
  transition: background-color 200ms linear;
	color: #10225B !important;

}

.navbar-default .navbar-header .navbar-brand {
    text-transform: uppercase;
    font-family: 'Open Sans','Varela Round',Arial,sans-serif;
    font-weight: 700;
    color: #39589F;
}

.navbar-default .navbar-header .navbar-brand:hover,
.navbar-default .navbar-header .navbar-brand:focus {
    color: black;
}

.navbar-default .nav > li>a,
.navbar-default .nav>li>a:focus {
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 700;
    color: #39589F;
}

.navbar-default .nav > li>a:hover,
.navbar-default .nav>li>a:focus:hover {
    color: #10225B;
}

.navbar-default .nav > li.active>a,
.navbar-default .nav>li.active>a:focus {
    color: #10225B !important;
    background-color: transparent;
}

.navbar-default .nav > li.active>a:hover,
.navbar-default .nav>li.active>a:focus:hover {
    background-color: transparent;
}

@media(min-width:768px) {
    .navbar-default {
        border-color: rgba(255,255,255,.3);
        background-color: transparent;
    }

    .navbar-default .navbar-header .navbar-brand:hover,
    .navbar-default .navbar-header .navbar-brand:focus {
        color: #10225B;
    }

    .navbar-default .nav > li>a,
    .navbar-default .nav>li>a:focus {
        color: #39589F;
    }

    .navbar-default .nav > li>a:hover,
    .navbar-default .nav>li>a:focus:hover {
        color: #10225B;
    }

    .navbar-default.affix {
        border-color: rgba(34,34,34,.05);
        background-color: #fff;
    }

    .navbar-default.affix .navbar-header .navbar-brand {
        font-size: 14px;
        color: #39589F;
    }

    .navbar-default.affix .navbar-header .navbar-brand:hover,
    .navbar-default.affix .navbar-header .navbar-brand:focus {
        color: #39589F;
    }

    .navbar-default.affix .nav > li>a,
    .navbar-default.affix .nav>li>a:focus {
        color: #10225B;
    }

    .navbar-default.affix .nav > li>a:hover,
    .navbar-default.affix .nav>li>a:focus:hover {
        color: #10225B;
    }
}

header {
	position: relative;
	width: 100%;
	min-height: auto;
	text-align: center;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	min-height: 100%;
}

header .header-content {
	position: relative;
	text-align: center;
}

.header-position {
	margin-bottom: 100px;
	color: white;
	font-size: 30px;
}

section, #contact {
	position: relative;
	width: 100%;
	padding: 80px 15px;
	text-align: center;
}

.header-content-inner {
	padding-top: 100px;
}

.header-name {
	font-size: 40px;
	text-transform: uppercase;
	font-weight: 400;
	color: white;
	margin-top: 300px;
	letter-spacing: 10px;
}

ul.polaroids a:after {
  content: attr(profile-img);
}

.profile-img {
	width: 280px;
	height: 420px;
	margin-bottom: 20px;
}

.profile-content {
	color: #10225B;
	margin-top: 100px;
	text-align: center;
	font-size: 17px;
}

.social a {
	font-size: 25px;
	color: white;
}

h4 {
	margin-bottom: 100px;
}

h3 {
	color: #10225B;
	font-size: 30px;
	margin: 0;
	padding-bottom: 10px;
}

.bg-primary {
    background-color: whitesmoke;
}

#contact {
    background-color: whitesmoke;
		padding-top: 200px;
		padding-bottom: 200px;
}

.contact-header {
	color: white;
	margin-top: 100px;
}

.bg-about {

}


p, #projects, #contact{
	color: #10225B;

}

#projects{
	padding-top: 70px;
	padding-bottom: 70px;
	background-color: white;
}

.projects-container {
	margin: 15px;
}

.project-image {
	height: 100%;
	width: 100%;
}

#drone-image {
	height: 313px;
}

.project-name {
	padding: 15px;
}

.color-box:hover {
  background-color: #10225B;
	color: white;
}

.shadow-box:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.shadow-box {
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #10225B;
	height: 266px;
}

.text {
  color: white;
  font-size: 16px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}
/* .project-image {
	width: 100%;
	height: 80%;
} */
.picture-container:hover .overlay {
	opacity: 0.9;
}

.project-link {
	font-size: 30px;
	color: white;
}

.project-name{
	text-align: center;
	/* margin: 15px; */
}

.portfolio-box-caption {
	padding-top: 10px;
	text-align: left;
	font-size: 18px;
}

.about-content {
	font-size: 14px;
}

.bg-recs {
	background-color: #10225B;
}

.recs {
	font-style: italic;
	font-size: 17px;
	padding-right: 20px;
	margin-left: auto;
	text-align: center;
}

.rec-box {
	padding-right: 30px;
	padding-left: 30px;
	text-align:left;
}

.rec-box p {
	color: #fff;
}

#recommendations {
	margin-top: 0px;
	padding-top: 80px;
}
.bg-header {
	background-color: whitesmoke;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	position: relative;
	min-height: 75%;
}

.bg-contact {
	background-color: whitesmoke;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	position: relative;
	min-height: 50%;
}

